# learning-cmake

./: README.md
minimal-cpp/: CMakeLists.txt  README.txt  generator.cpp  generator.sh  hw.cpp  hw.h
minimal-generated/: CMakeLists.txt  main.cpp
